# ouchi-se

./: .gitignore  README.md
01/: README.md  pyproject.toml
01/ouchi_se_01/: reminder.py
02/: README.md  env.example  pyproject.toml
02/ouchi_se_02/: google_calendar_api.py  notification_daily.py
03/: README.md  pyproject.toml
03/ouchi_se_03/: hello.py
04/: README.md  env.example  pyproject.toml
04/ouchi_se_04/: google_calendar_api.py  notice_board_api.py
04/rbp/: README.md  clear.py  epaper.py  main.py
05/: README.md  env.example  pyproject.toml
05/ouchi_se_05/: event_collector.py
